Atualização do nome da pagina e Adicionar favicon

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>CRUD NODEJS + MYSQL</title>
+    <link rel="icon" href="https://nextcloud.phsolucoes.tech/index.php/apps/files_sharing/publicpreview/MNmFqyZmTCoAH98?file=/&fileId=92543&x=1920&y=1080&a=true" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
